welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:1: error: Missing closing brace `}' assumed here
def Brosse() {
^PictureMono3:1: error: expected class or object definition
def Brosse() {
^PictureMono3:5: error: expected class or object definition
def faireV() {
^PictureMono3:14: error: expected class or object definition
def faireMotif() {
^PictureMono3:20: error: expected class or object definition
def faireMotifligne() {
^PictureMono3:29: error: expected start of definition
override def run() {
         ^